<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".gui.fragments.SettingsFragment">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:id="@+id/linearLayout">

        <com.google.android.material.switchmaterial.SwitchMaterial
                android:text="@string/settings_ai_enabled_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ai_enabled_switch"
                android:textSize="20sp"
                android:minHeight="48dp"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
                android:text="@string/settings_ai_starts_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ai_starts_switch"
                android:minHeight="48dp"
                android:textSize="20sp"/>

        <com.google.android.material.switchmaterial.SwitchMaterial
                android:text="@string/settings_swap_marks_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/swap_marks_switch"
                android:minHeight="48dp"
                android:textSize="20sp"/>

        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/field_size_text"
                    android:text="@string/settings_field_size_text"
                    app:flow_horizontalAlign="center"
                    app:textAllCaps="false"
                    app:flow_verticalAlign="center"
                    android:textAlignment="textStart"
                    android:textSize="20sp"
                    android:textColor="?android:attr/textColorPrimary"/>

            <SeekBar
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/field_size_bar"
                    style="@style/Widget.AppCompat.SeekBar"
                    android:minHeight="48dp"/>

            <TextView
                    android:text="@string/settings_combo_hint_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/combo_hint_text"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>