<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/nav_graph"
            app:startDestination="@id/field">

    <fragment
            android:id="@+id/field"
            android:name="ae9o.tictactoe.gui.fragments.FieldFragment"
            android:label="@string/field_fragment_label"
            tools:layout="@layout/fragment_field"/>

    <fragment
            android:id="@+id/settings"
            android:name="ae9o.tictactoe.gui.fragments.SettingsFragment"
            android:label="@string/settings_fragment_label"
            tools:layout="@layout/fragment_settings"/>

    <fragment
            android:id="@+id/about"
            android:name="ae9o.tictactoe.gui.fragments.AboutFragment"
            android:label="@string/about_fragment_label"
            tools:layout="@layout/fragment_about"/>

    <action
            android:id="@+id/action_global_settings"
            app:destination="@id/settings"
            app:popUpTo="@id/field"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>

    <action
            android:id="@+id/action_global_about"
            app:destination="@id/about"
            app:popUpTo="@id/field"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:exitAnim="@anim/nav_default_exit_anim"
            app:popEnterAnim="@anim/nav_default_pop_enter_anim"
            app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
</navigation>