<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".gui.fragments.FieldFragment">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/game_result_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:gravity="center"
            android:textSize="34sp"
            android:clickable="false"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="24dp"
            android:text="@string/field_draw_msg"/>

    <ae9o.tictactoe.gui.views.FieldLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/field_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/game_result_text"
            app:layout_constraintBottom_toTopOf="@+id/bottom_layout"/>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="70dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/bottom_layout"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="24dp">

        <ae9o.tictactoe.gui.views.FieldCell
                app:mark="x"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/x_mark"
                tools:ignore="SpeakableTextPresentCheck"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:xForegroundColor="@color/light_gray"
                app:oForegroundColor="@color/light_gray"
                android:layout_marginStart="24dp"/>

        <TextView
                android:text="@string/field_x_score_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/x_score_text"
                android:gravity="center"
                android:textSize="24sp"
                app:layout_constraintStart_toEndOf="@+id/x_mark"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textColor="@color/light_gray"/>

        <Button
                android:text="@string/field_restart_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/restart_button"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/o_score_text"
                app:layout_constraintStart_toEndOf="@+id/x_score_text"/>

        <TextView
                android:text="@string/field_o_score_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/o_score_text"
                android:gravity="center"
                android:textSize="24sp"
                app:layout_constraintEnd_toStartOf="@+id/o_mark"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:textColor="@color/light_gray"/>

        <ae9o.tictactoe.gui.views.FieldCell
                app:mark="o"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/o_mark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:xForegroundColor="@color/light_gray"
                app:oForegroundColor="@color/light_gray"
                android:layout_marginEnd="24dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>